--- a/index.html
+++ b/index.html
@@ -1317,7 +1317,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; 2025 Ixtisoslashtirilgan Maktab. Barcha huquqlar himoyalangan.</p>
+            <p>&copy; 2025 Ixtisoslashtirilgan Maktab. Barcha huquqlar himoyalangan. Ushbu sayt sifer09 tomonidan yaratildi!</p>
         </div>
     </footer>
 
